[package]
name = "bellare-micali"
version = "0.1.0"
edition = "2021"
authors = ["Debrup Chatterjee <debrupc3@gmail.com>"]
description = "Implementation of Bellare-Micali 1-out-of-2 Oblivious Transfer Protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cozy03/bellare-micali"
documentation = "https://docs.rs/bellare-micali/0.1.0"
keywords = ["cryptography", "oblivious-transfer", "privacy", "secure-computation", "mpc"]
categories = ["cryptography", "algorithms", "mathematics"]

[dependencies]
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
thiserror = "1.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rayon = "1.7"  # Added rayon for parallel processing

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
test-case = "3.0"
rand_chacha = "0.3"

[[bench]]
name = "ot_benchmarks"
harness = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false